# sphere-generator

./: CMakeLists.txt  README.md  makefile
include/: SphereGenerator.h
lib/: RunSphereGenerator.c++  SphereGenerator.c++  buildSphere.c++
